arrow down z-index fix and slideScroll pos fix

--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -217,7 +217,7 @@
 	position: absolute;
 	right: 80px;
 	bottom: 40px;
-	z-index: 20;
+	z-index: 10;
 	.line,
 	.line-inside{
 		display: block;
